<resources>
    <string name="app_name">Alc_challenge</string>
    <string name="welcome_text">Welcome to ALC 4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Lucky Brown</string>
    <string name="track">Track:</string>
    <string name="track_title">Android Track</string>
    <string name="country">Country:</string>
    <string name="pays">Nigeria</string>
    <string name="email">Email:</string>
    <string name="email_txt">luqi.braun@gmail.com</string>
    <string name="phonenumber">PhoneNumber:</string>
    <string name="no_txt">+2347038211616</string>
    <string name="slack_username">Slack Username:</string>
    <string name="username_txt">Lucky brown</string>
</resources>
