<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ng.com.secondwind.alc_challenge.ProfileActivity">



    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/Imageviewid"
        android:padding="16dp"
        android:background="@drawable/user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        tools:fontFamily="@font/bentham" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="190dp"
        android:text="@string/track"
        tools:fontFamily="@font/bentham"
        tools:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="190dp"
        android:text="@string/track_title"
        tools:fontFamily="@font/bentham"
        tools:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="210dp"
        android:text="@string/country"
        tools:fontFamily="@font/bentham"
        tools:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="210dp"
        android:text="@string/pays"
        tools:fontFamily="@font/bentham"
        tools:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="230dp"
        android:text="@string/email"
        tools:fontFamily="@font/bentham"
        tools:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="230dp"
        android:text="@string/email_txt"
        tools:fontFamily="@font/bentham"
        tools:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="250dp"
        android:text="@string/phonenumber"
        tools:fontFamily="@font/bentham"
        tools:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="250dp"
        android:text="@string/no_txt"
        tools:fontFamily="@font/bentham"
        tools:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="270dp"
        android:text="@string/slack_username"
        tools:fontFamily="@font/bentham"
        tools:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="270dp"
        android:text="@string/username_txt"
        tools:fontFamily="@font/bentham"
        tools:textSize="18sp" />





</RelativeLayout>
